vscode/spring-vscode/template.yaml
apiVersion: tmax.io/v1
kind: ClusterTemplate
metadata:
  name: spring-vscode-template
  annotations:
    template-version: 5.0.5
    tested-operator-version: 0.2.5
shortDescription: VS Code Deployment
longDescription: Visual Studio Code Deployment
urlDescription: https://code.visualstudio.com/
imageUrl: https://f1.codingworldnews.com/2019/05/66b3i9a88q.png
provider: tmax
categories:
- vscode
- ide
parameters:
  - name: APP_NAME
    displayName: AppName
    description: A VS Code Deployment Name
    required: true
  - name: STORAGE
    displayName: Storage
    description: Storage size
    required: true
  - name: STORAGE_CLASS
    displayName: StorageClass
    description: Storage class
    value: csi-cephfs-sc
    required: true
  - name: SERVICE_TYPE
    displayName: ServiceType
    description: Service Type (ClusterIP/NodePort/LoadBalancer/Ingress)
    required: true
  - name: EXTERNAL_URL
    displayName: ExternalURL
    description: External URL, if it's different from the default endpoint of SERVICE_TYPE
    required: false
    value: ''
  - name: WEB_NODE_IP
    displayName: WebNodeIP
    description: (Only for NodePort type) Web NodeIP
    required: false
    value: ''
  - name: WEB_NODE_PORT
    displayName: WebNodePort
    description: (Only for NodePort type) Web NodePort
    required: false
    value: 80
    valueType: number
  - name: INGRESS_HOST
    displayName: IngressHost
    description: (Only for Ingress type) Ingress hostname
    required: false
    value: ''
  - name: GIT_EMAIL
    displayName: GitEmail
    description: Git emial for git config
    required: false
    value: ''
  - name: GIT_USERNAME
    displayName: GitUserName
    description: Git username for git config
    required: false
    value: ''
objects:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: ${APP_NAME}-account
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: ${APP_NAME}-role
  rules:
  - apiGroups: [""]
    resources: ["services"]
    resourceNames: ["${APP_NAME}-service"]
    verbs: ["get", "list", "create", "patch", "update"]
  - apiGroups: ["extensions", "apps"]
    resources: ["deployments"]
    resourceNames: ["${APP_NAME}"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
  - apiGroups: ["networkings", "extensions"]
    resources: ["ingresses"]
    resourceNames: ["${APP_NAME}-ingress"]
    verbs: ["get", "list", "create", "patch", "update", "delete"]
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: ${APP_NAME}-binding
  subjects:
  - kind: ServiceAccount
    name: ${APP_NAME}-account
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: ${APP_NAME}-role

- apiVersion: v1
  kind: Service
  metadata:
    name: ${APP_NAME}-service
    labels:
      app: ${APP_NAME}
  spec:
    type: ClusterIP
    ports:
    - port: 80
      name: web-ui
      targetPort: 8080
    selector:
      app: ${APP_NAME}
- apiVersion: networking.k8s.io/v1beta1
  kind: Ingress
  metadata:
    name: ${APP_NAME}-ingress
    annotations:
      kubernetes.io/ingress.class: nginx-shd
  spec:
    rules:
    - host: waiting.ip
      http:
        paths:
        - backend:
            serviceName: ${APP_NAME}-service
            servicePort: 80
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: ${APP_NAME}-pvc
    labels:
      app: ${APP_NAME}
  spec:
    storageClassName: ${STORAGE_CLASS}
    accessModes:
    - ReadWriteMany
    resources:
      requests:
        storage: ${STORAGE}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ${APP_NAME}
    labels:
      app: ${APP_NAME}
  spec:
    selector:
      matchLabels:
        app: ${APP_NAME}
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: ${APP_NAME}
      spec:
        serviceAccountName: ${APP_NAME}-account
        containers:
        - name: ${APP_NAME}
          image: docker.io/tmaxcloudck/codeserver:0.2.2
          command:
            - /bin/bash
            - -c
            - |
              EMAIL="${GIT_EMAIL}"
              USR_NAME="${GIT_USERNAME}"
              if [[ "$EMAIL" != "" ]]; then
                git config --global user.email ${EMAIL}
              fi
              if [[ "$USR_NAME" != "" ]]; then
                git config --global user.name ${USR_NAME}
              fi
              code-server--install-extension vscjava.vscode-java-pack
              code-server --install-extension pivotal.vscode-boot-dev-pack
              code-server --auth none --bind-addr 0.0.0.0:8080
          volumeMounts:
          - name: ${APP_NAME}-pv
            mountPath: /home/coder/project
            subPath: project
          - name: ${APP_NAME}-pv
            mountPath: /home/coder/.config/code-server
            subPath: config
          - name: ${APP_NAME}-pv
            mountPath: /home/coder/.local/share/code-server
            subPath: user-data-dir
        volumes:
        - name: ${APP_NAME}-pv
          persistentVolumeClaim:
            claimName: ${APP_NAME}-pvc
plans:
- name: vscode-plan1
  description: VSCode Plan
  metadata:
    bullets:
    - VSCode Deployment Plan
    costs:
      amount: 100
      unit: $
  free: false
  bindable: true
  plan_updateable: false
  schemas:
    service_instance:
      create:
        parameters:
          APP_NAME: spring-vscode-deploy
          STORAGE: 10Gi
